--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,13 @@
   ],
   "require": {
     "ext-xmlwriter": "*",
-    "php": ">=7.3"
+    "php": ">=7.3",
+    "phpunit/phpunit": "^8.2"
   },
   "autoload": {
     "psr-4": {
-      "App\\": "src/"
+      "App\\": "src/",
+      "Tests\\": "tests/"
     }
   }
 }
