--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,17 @@
   ],
   "require": {
     "ext-xmlwriter": "*",
-    "php": ">=7.3",
+    "php": ">=7.3"
+  },
+  "require-dev": {
     "phpunit/phpunit": "^8.2"
   },
   "autoload": {
     "psr-4": {
-      "App\\": "src/",
-      "Tests\\": "tests/"
+      "Windstep\\YRLGenerator": "src/"
     }
+  },
+  "autoload-dev": {
+    "Tests\\": "tests/"
   }
 }
