--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
   ],
   "require": {
     "ext-xmlwriter": "*",
-    "php": ">=7.3"
+    "php": ">=7.3",
+    "myclabs/php-enum": "^1.7"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.2"
